k8s/ingress/odoo-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odoo-proxy
  namespace: ingress
spec:
  type: ExternalName
  externalName: odoo.default.svc.cluster.local
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
